--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Printable RPG Monster Cards",
   "scripts": {
     "start": "electron .",
-    "data:once": "node --experimental-json-modules --no-warnings ./src/js/builder/buildData.js -env dev",
-    "data:build": "node --experimental-json-modules --no-warnings ./src/js/builder/buildData.js -env prod",
+    "data:once": "node --experimental-json-modules --no-warnings ./src/js/builder/buildData.js --env dev",
+    "data:build": "node --experimental-json-modules --no-warnings ./src/js/builder/buildData.js --env prod",
     "build": "npm run data:build & npm run js:build & npm run css:build",
     "js:once": "rollup -c ./src/config/rollup.js",
     "js:watch": "rollup -w -c ./src/config/rollup.js",
     "js:build": "rollup -c ./src/config/rollup.js --config-env=prod",
     "css:once": "postcss ./src/css/main.css --config=src/config/postcss --verbose -d public/css",
     "css:watch": "postcss ./src/css/main.css --config=src/config/postcss -d public/css -w",
-    "css:build": "postcss ./src/css/main.css --config=src/config/postcss -d public/css --config-env=prod"
+    "css:build": "postcss ./src/css/main.css --config=src/config/postcss -d public/css --env=prod"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
@@ -37,7 +37,8 @@
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-svg": "^2.0.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "yamljs": "^0.3.0"
   },
   "dependencies": {
     "fancy-node": "^1.0.12"
