card edit rudimentary

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -39,5 +39,8 @@
   "storageKeys": {
     "user": "gb-user-prefs",
     "cards": "gb-cards"
+  },
+  "userCharacters": {
+    "inLibrary": true
   }
 }
