--- a/src/data/raw/field-config.yml
+++ b/src/data/raw/field-config.yml
@@ -1,5 +1,6 @@
 ---
-# name also serves as an example
+# config for `public/js/characters.json` which is based on `data/raw/monsters.json`
+# `name` also serves as example
 name:                   
   labels:
     group: First Letter # default: labels.long
@@ -9,7 +10,7 @@ name:
     card: true          # display this element on the card, default: true
     label: true         # display a label for this element on the card, default: true
     group: true         # display this element on 'Group by', default: false
-  key: name             # display this element default: the actual key, e.g. 'name'
+  key: name             # the key for this element, default: the actual key, e.g. 'name'
 
 # this is a special field to label the group of user built items in the library
 __user:
@@ -21,7 +22,7 @@ __user:
 # back to regular fields
 img:
   labels:
-    long: Image
+    long: Image URL
     short: Img
   visibility:
     label: false
