fixed reset styles, repositioned lib order

--- a/src/data/raw/field-config.yml
+++ b/src/data/raw/field-config.yml
@@ -17,7 +17,7 @@ __user:
   labels:
     long: Your Creatures
   visibility:
-    group: true  
+    group: false  
 
 # back to regular fields
 img:
