--- a/src/config/config.json
+++ b/src/config/config.json
@@ -8,7 +8,7 @@
     "target": "src/data/css-props.json"
   },
   "fonts": {
-    "src": "src/data/raw/fonts.txt",
+    "src": "src/config/fonts.txt",
     "target": "src/data/fonts.json"
   },
   "backgrounds": {
@@ -20,11 +20,11 @@
     "target": "src/data/borders.json"
   },
   "characters": {
-    "src": "src/data/raw/monsters.json",
+    "src": "src/config/monsters.json",
     "target": "public/js/characters.json"
   },
   "fields": {
-    "src": "src/data/raw/field-config.yml"
+    "src": "src/config/field-config.yml"
   },
   "labels": {
     "target": "src/data/labels.json"
